tests/snapshots/integration__empty_body_200.snap
---
source: tests/integration.rs
expression: xml
---
<testsuites tests="1" failures="1">
    <testcase name="empty_body_200" time="0.00">
        <properties>
            <property name="path" value="/pets/1"></property>
            <property name="method" value="DELETE"></property>
            <property name="pathParameter-petId" value="1"></property>
            <property name="statusCode" value="200"></property>
            <property name="operationId" value="deletePet"></property>
        </properties>
        <failure type="InvalidStatusCode" message="error">Response not found for status code</failure>
    </testcase>
</testsuites>
