tests/snapshots/integration__failed_json_deserialization.snap
---
source: tests/integration.rs
expression: xml
---
<testsuites>
    <testsuite name="testsuite" tests="1" failures="1">
        <testcase name="failed_json_deserialization" time="0.00">
            <properties>
                <property name="path" value="/pets/1"></property>
                <property name="method" value="GET"></property>
                <property name="pathParameter-petId" value="1"></property>
                <property name="statusCode" value="200"></property>
                <property name="operationId" value="showPetById"></property>
                <property name="responseContentType" value="application/json"></property>
            </properties>
            <failure type="FailedJSONDeserialization" message="error">Failed to parse response body as JSON</failure>
        </testcase>
    </testsuite>
</testsuites>
