tests/snapshots/integration__failed_validation_unexpected_number.snap
---
source: tests/integration.rs
expression: xml
---
<testsuites>
    <testsuite name="testsuite" tests="1" failures="1">
        <testcase name="failed_validation_unexpected_number" time="0.00">
            <system-out>
[[PROPERTY|path=/pets/1]]
[[PROPERTY|method=GET]]
[[PROPERTY|pathParameter-petId=1]]
[[PROPERTY|statusCode=200]]
[[PROPERTY|operationId=showPetById]]
[[PROPERTY|responseContentType=application/json]]
            </system-out>
            <failure type="FailedValidation.UnexpectedNumber" message="error">Received unexpected number at /name/</failure>
        </testcase>
    </testsuite>
</testsuites>
