tests/snapshots/integration__invalid_status_code.snap
---
source: tests/integration.rs
expression: xml
---
<testsuites>
    <testsuite name="testsuite" tests="1" failures="1">
        <testcase name="invalid_status_code" time="0.00">
            <properties>
                <property name="path" value="/pets"></property>
                <property name="method" value="GET"></property>
                <property name="statusCode" value="600"></property>
                <property name="operationId" value="listPets"></property>
            </properties>
            <failure type="InvalidStatusCode" message="error">Response not found for status code</failure>
        </testcase>
    </testsuite>
</testsuites>
