tests/snapshots/integration__mismatch_non_empty_body.snap
---
source: tests/integration.rs
expression: xml
---
<testsuites>
    <testsuite name="testsuite" tests="1" failures="1">
        <testcase name="mismatch_non_empty_body" time="0.00">
            <properties>
                <property name="path" value="/pets/1"></property>
                <property name="method" value="GET"></property>
                <property name="pathParameter-petId" value="1"></property>
                <property name="statusCode" value="202"></property>
                <property name="operationId" value="showPetById"></property>
                <property name="responseContentType" value=""></property>
            </properties>
            <failure type="MismatchNonEmptyBody" message="error">Receieved response body when empty body is expected</failure>
        </testcase>
    </testsuite>
</testsuites>
